--- a/Tushar/New project black/index.html
+++ b/Tushar/New project black/index.html
@@ -9,7 +9,7 @@
         <!-- 1. Give the sum paragraph and id of sum-el -->
         <p id="sum">Sum:</p>
         <button onclick="startGame()">START GAME</button>
-        <button onclick="newGame()">NEW GAME</button>
+        <button id="newcard" onclick="newGame()">NEW CARD</button>
         <script src="index.js"></script>
     </body>
 </html>
