--- a/Parth/chrome-ext/chrome-ext.html
+++ b/Parth/chrome-ext/chrome-ext.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <input type="text" id="input">
-    <button id="input-btn">chl bsdk</button>
-    <script src="chrome-ext.js" ></script>
-</body>
+<html>
+    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+        <link rel="stylesheet" href="chrome-ext.css">
+    </head>
+    <body>
+        <input type="text" id="input-el">
+        <button id="input-btn">SAVE INPUT</button>
+        <ul id="ul-el">
+        </ul>
+        <script src="chrome-ext.js"></script>
+    </body>
 </html>
