--- a/Parth/exchange/exchange.html
+++ b/Parth/exchange/exchange.html
@@ -68,7 +68,7 @@
                 <option value="VND">VND</option>
                 <option value="ZAR">ZAR</option>
             </select>
-        <input type="number" name="" id="amount-one" placeholder="0" value="1">
+        <input type="number" id="amount-one" placeholder="0" value="1" />
         </div>
         <div class="swap-exchange-rate">
             <button class = "swap" id = "swap">
@@ -77,7 +77,7 @@
         </div>
         <div class="amount"></div>
         <div class="currency">
-            <select id="currency-one">
+            <select id="currency-two">
                 <option value="AED">AED</option>
                 <option value="ARS">ARS</option>
                 <option value="AUD">AUD</option>
