--- a/Tushar/drive project/index.html
+++ b/Tushar/drive project/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Folder upload</h1>
 
     <label for="folder">Select folder</label>
-    <input type="file" id="folder" webkitdirectory multiple/>
+    <input type="file" id="folder" webkitdirectory multiple />
 
-    <h2>Selected Files</h2>
+    <h2 id="FolderName">Selected Files</h2>
 
     <table>
-        
+
     </table>
 
     <script src="index.js"></script>
 </body>
+
 </html>
