--- a/Tushar/drive project/index.html
+++ b/Tushar/drive project/index.html
@@ -6,17 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Folder upload</h1>
+    <h1>Folder Upload</h1>
 
-    <label for="folder">Select folder</label>
+    <label for="folder">Select folder</label>&nbsp&nbsp
     <input type="file" id="folder" webkitdirectory multiple />
 
     <h2 id="FolderName">Selected Files</h2>
 
-    <table>
+    <table id="table" class="center">
 
     </table>
 
